# steam-switcher

./: Cargo.toml  README.md  setup.sh
src/: config.rs  lib.rs  main.rs  steam.rs
