[package]
name = "steam-switcher"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.68"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sysinfo = "0.27.7"

[[bin]]
name = "ssw"
path = "src/lib.rs"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
